Update for new release

--- a/images/metrics-server/Dockerfile
+++ b/images/metrics-server/Dockerfile
@@ -1,9 +1,9 @@
-FROM riscv64/alpine:edge as build
+FROM alpine:3.20.3 as build
 
 RUN apk add -U bash build-base go git
 RUN mkdir -p /go/src/sigs.k8s.io/metrics-server && \
     cd /go/src/sigs.k8s.io && \
-    git clone --depth 1 --branch v0.6.3 https://github.com/kubernetes-sigs/metrics-server.git
+    git clone --depth 1 --branch v0.7.2 https://github.com/kubernetes-sigs/metrics-server.git
 WORKDIR /go/src/sigs.k8s.io/metrics-server
 
 RUN go mod download
