--- a/images/pause/Dockerfile
+++ b/images/pause/Dockerfile
@@ -1,9 +1,9 @@
-FROM riscv64/ubuntu:latest AS builder
+FROM ubuntu:latest AS builder
 
 RUN apt-get update && \
     apt-get install -y wget gcc && \
-    wget https://raw.githubusercontent.com/kubernetes/kubernetes/v1.27.2/build/pause/linux/pause.c && \
-    gcc -Os -Wall -Werror -static -DVERSION=v3.9-v1.27.2 -o pause pause.c
+    wget https://raw.githubusercontent.com/kubernetes/kubernetes/v1.31.1/build/pause/linux/pause.c && \
+    gcc -Os -Wall -Werror -static -DVERSION=v3.10-v1.31.1 -o pause pause.c
 
 FROM scratch
 COPY --from=builder /pause /pause
